--- a/Odev_2/24015045odev_2.md
+++ b/Odev_2/24015045odev_2.md
@@ -4,19 +4,15 @@ Repository projemizin tüm dosyalarının,klasörlerinin ve değişikliklerinin 
 Commit  
 Commit'ler bizim projemizde yaptığımız her değişikliğe verilen addır. Bunları Git'e kaydederiz
 ÖRNEK: git commit -m "yeni bir güncelleme eklenmesi."
-Stage
+Stage  
 Aslında çalışmalarımızı commit etmeden önceki ara aşamadır. Yani anladığım kadarıyla örneğin elimizde farklı dosyalar var ve biz bu dosyalarda değişiklikler yaptık
-eğer commit edersek burdaki tüm değişiklikler kaydolacak ama biz istiyoruz ki bazı kısımlar commit edilsin bazıları kalsın çünkü onlar üzerinde daha yapacağımız işlemler,
-değişiklikler var burda da stage bizim yardımımıza yetişiyor. Stage sayesinde seçtiğimiz kısımları kaydedip sadece o kısımları commit edebiliyoruz diğer kısımları ise
-daha sonra halledebliyoruz. Aynen önceki yaptığımız gibi de onlarda işimiz bittiğinde onları da aynı aşamalardan geçirtebiliyoruz. Örneğin 2 dosyamız var 1'ini bugün
-stage'e ekledim diğerini ise yarın tamamlayıp stage'e ekledim ve sonra commit ettim ve iki dosyamda istediğim gibi commit edildi veya 1'i bittiği gibi stage'e alıp
-direkt o gün commit edebilir kalan diğer dosyayı da başka zaman bitirip sonra stage'e alıp commit edebilirim.
-ÖRNEK: git add yoda.md  //burada yoda dosyamı stage'e aldım
-       git commit -m "yoda dosyası tamamlandı."
-Branch
-Branch projemizin dallarıdır, herkes kendi branşında çalışabilir. Yani bir main branch'imiz vardır bu ana proje kodlarının bulunduğu alandır bunu kopyalaıp yeni branch oluştururuz ve orada kendi geliştirmemizi kendi alanımıza göre yaparız böylece ana kod bozulmamış olur ve biz bağımsız olarak kendi değişikliklerimizi ve geliştirmelerimizi rahatça yapabiliriz ve en sonunda biz ve arkadaşlarımız işimiz komple bittiğinde bu kodları main branch ile birleştirebilir ve projemizi tamamlayabiliriz.
-ÖRNEK: git checkout -b odev_2  //odev_2 branch'imiz oluştu.
-Merge
+eğer commit edersek burdaki tüm değişiklikler kaydolacak ama biz istiyoruz ki bazı kısımlar commit edilsin bazıları kalsın çünkü onlar üzerinde daha yapacağımız işlemler, değişiklikler var burda da stage bizim yardımımıza yetişiyor. Stage sayesinde seçtiğimiz kısımları kaydedip sadece o kısımları commit edebiliyoruz diğer kısımları ise daha sonra halledebliyoruz. Aynen önceki yaptığımız gibi de onlarda işimiz bittiğinde onları da aynı aşamalardan geçirtebiliyoruz. Örneğin 2 dosyamız var 1'ini bugün stage'e ekledim diğerini ise yarın tamamlayıp stage'e ekledim ve sonra commit ettim ve iki dosyamda istediğim gibi commit edildi veya 1'i bittiği gibi stage'e alıp direkt o gün commit edebilir kalan diğer dosyayı da başka zaman bitirip sonra stage'e alıp commit edebilirim.  
+ÖRNEK: git add yoda.md  //burada yoda dosyamı stage'e aldım  
+       git commit -m "yoda dosyası tamamlandı."  
+Branch  
+Branch projemizin dallarıdır, herkes kendi branşında çalışabilir. Yani bir main branch'imiz vardır bu ana proje kodlarının bulunduğu alandır bunu kopyalaıp yeni branch oluştururuz ve orada kendi geliştirmemizi kendi alanımıza göre yaparız böylece ana kod bozulmamış olur ve biz bağımsız olarak kendi değişikliklerimizi ve geliştirmelerimizi rahatça yapabiliriz ve en sonunda biz ve arkadaşlarımız işimiz komple bittiğinde bu kodları main branch ile birleştirebilir ve projemizi tamamlayabiliriz.  
+ÖRNEK: git checkout -b odev_2  //odev_2 branch'imiz oluştu.  
+Merge  
 Merge ise tam olarak yukarıda bahsettiğim birleştirme işlemine verilen addır.
 ÖRNEK: git checkout main       
        git merge odev_2  //ilk main branch'e geçtik sonra da odev_2'yi main ile birleştirdik.
