--- a/Odev_2/24015045odev_2.md
+++ b/Odev_2/24015045odev_2.md
@@ -2,10 +2,10 @@ Git kodlarken daha düzenli ilerlememizi sağlayan bir kontrol sistemidir. Git i
 Repository(Repo)  
 Repository projemizin tüm dosyalarının,klasörlerinin ve değişikliklerinin saklandığı yerdir. Yani aslında ana klasördür. GitHub'da açtığımız repoya uzak repo deriz.  
 Commit  
-Commit'ler bizim projemizde yaptığımız her değişikliğe verilen addır. Bunları Git'e kaydederiz
-ÖRNEK: git commit -m "yeni bir güncelleme eklenmesi."
+Commit'ler bizim projemizde yaptığımız her değişikliğe verilen addır. Bunları Git'e kaydederiz  
+ÖRNEK: git commit -m "yeni bir güncelleme eklenmesi."  
 Stage  
-Aslında çalışmalarımızı commit etmeden önceki ara aşamadır. Yani anladığım kadarıyla örneğin elimizde farklı dosyalar var ve biz bu dosyalarda değişiklikler yaptık
+Aslında çalışmalarımızı commit etmeden önceki ara aşamadır. Yani örneğin elimizde farklı dosyalar var ve biz bu dosyalarda değişiklikler yaptık
 eğer commit edersek burdaki tüm değişiklikler kaydolacak ama biz istiyoruz ki bazı kısımlar commit edilsin bazıları kalsın çünkü onlar üzerinde daha yapacağımız işlemler, değişiklikler var burda da stage bizim yardımımıza yetişiyor. Stage sayesinde seçtiğimiz kısımları kaydedip sadece o kısımları commit edebiliyoruz diğer kısımları ise daha sonra halledebliyoruz. Aynen önceki yaptığımız gibi de onlarda işimiz bittiğinde onları da aynı aşamalardan geçirtebiliyoruz. Örneğin 2 dosyamız var 1'ini bugün stage'e ekledim diğerini ise yarın tamamlayıp stage'e ekledim ve sonra commit ettim ve iki dosyamda istediğim gibi commit edildi veya 1'i bittiği gibi stage'e alıp direkt o gün commit edebilir kalan diğer dosyayı da başka zaman bitirip sonra stage'e alıp commit edebilirim.  
 ÖRNEK: git add yoda.md //burada yoda dosyamı stage'e aldım  
        git commit -m "yoda dosyası tamamlandı."  
