--- a/Odev_2/24015045odev_2.md
+++ b/Odev_2/24015045odev_2.md
@@ -1,4 +1,4 @@
-Git kodlarken daha düzenli ilerlememizi sağlayan bir kontrol sistemidir. Git ile yazacağımız kodları bölümlere ayırıp onları kaydedip ve bir düzene sokup depolayabiliriz. GitHub da bu projeleri internette sakladığımız ve paylaştığımız sitedir. İstersek burdak açık kaynaklı kodlar paylaşabilir diğer insanların çalışmamıza katkı sağlamasını sağlayabiliriz.Onlar bize bizim projemizin üstüne olan çalışmalarını teklif olarak sunar ve bizde bunları inceleyerek çalışmamızı geliştirebiliriz. Ayrıca repositoryimizi public değilde private olarak tutarak yalnızca izin verdiğimiz kişilerin katkı sağlamasını sağlayabiliriz. Yani kısaca Git bizim bilgisayarımızda kaydetme dallandırma gibi işlemleri gerçekleştirirken GitHub ise bunları internete yükleme şansı sağlayıp takımca çalışmamızı sağlar.  
+Git kodlarken daha düzenli ilerlememizi sağlayan bir kontrol sistemidir. Git ile yazacağımız kodları bölümlere ayırıp onları kaydedip ve bir düzene sokup depolayabiliriz. GitHub da bu projeleri internette sakladığımız ve paylaştığımız sitedir. İstersek burada açık kaynaklı kodlar paylaşabilir, diğer insanların çalışmamıza katkı sağlamasını sağlayabiliriz. Onlar bize bizim projemizin üstüne olan çalışmalarını teklif olarak sunar ve bizde bunları inceleyerek çalışmamızı geliştirebiliriz. Ayrıca repository'mizi public değilde private olarak tutarak yalnızca izin verdiğimiz kişilerin katkı sağlamasını sağlayabiliriz. Yani kısaca Git bizim bilgisayarımızda kaydetme dallandırma gibi işlemleri gerçekleştirirken GitHub ise bunları internete yükleme şansı sağlayıp takımca çalışmamızı sağlar.  
 Repository(Repo)  
 Repository projemizin tüm dosyalarının,klasörlerinin ve değişikliklerinin saklandığı yerdir. Yani aslında ana klasördür. GitHub'da açtığımız repoya uzak repo deriz.  
 Commit  
@@ -10,7 +10,7 @@ eğer commit edersek burdaki tüm değişiklikler kaydolacak ama biz istiyoruz k
 ÖRNEK: git add yoda.md //burada yoda dosyamı stage'e aldım  
        git commit -m "yoda dosyası tamamlandı."  
 Branch  
-Branch projemizin dallarıdır, herkes kendi branşında çalışabilir. Yani bir main branch'imiz vardır bu ana proje kodlarının bulunduğu alandır bunu kopyalaıp yeni branch oluştururuz ve orada kendi geliştirmemizi kendi alanımıza göre yaparız böylece ana kod bozulmamış olur ve biz bağımsız olarak kendi değişikliklerimizi ve geliştirmelerimizi rahatça yapabiliriz ve en sonunda biz ve arkadaşlarımız işimiz komple bittiğinde bu kodları main branch ile birleştirebilir ve projemizi tamamlayabiliriz.  
+Branch projemizin dallarıdır, herkes kendi branşında çalışabilir. Yani bir main branch'imiz vardır bu ana proje kodlarının bulunduğu alandır bunu kopyalaıp yeni branch oluştururuz ve orada kendi geliştirmemizi kendi alanımıza göre yaparız böylece ana kod bozulmamış olur ve biz bağımsız olarak kendi değişikliklerimizi ve geliştirmelerimizi rahatça yapabiliriz ve en sonunda biz ve arkadaşlarımız, işimiz komple bittiğinde bu kodları main branch ile birleştirebilir ve projemizi tamamlayabiliriz.  
 ÖRNEK: git checkout -b odev_2 //odev_2 branch'imiz oluştu.  
 Merge  
 Merge ise tam olarak yukarıda bahsettiğim birleştirme işlemine verilen addır.  
