--- a/Odev_3/24015045_odev_3.md
+++ b/Odev_3/24015045_odev_3.md
@@ -14,7 +14,7 @@ kullanici = {"ad": "Vefa", "yas": 19 } #burada sözlük oluşturduk ilk kısıml
 for  
 numbers=[1,2,3,4,5,6] #listemiz var  
 for x in numbers:  
-    print(isim) #sırayla listedeki elemanları yazar  
+&nbsp&nbsp&nbspprint(isim) #sırayla listedeki elemanları yazar  
 for x in range(1, 10):  
     print(x) #burada da x sırasıyla aralıktaki rakamların yerine geçer yazdır dediğimiz için sırasıyla yazar ama 1 dahil 10 dahil değil  
 if-elif else  
