--- a/Odev_3/24015045_odev_3.md
+++ b/Odev_3/24015045_odev_3.md
@@ -1,6 +1,7 @@
-print #yazma kodudur  
+```python
+#print yazma kodudur  
 print("hosgeldiniz!")  
-input #girdi alma kodudur  
+#input girdi alma kodudur  
 input("ad giriniz:")  
 kume= {"a","b","c"} #şeklinde küme oluştururuz, kümlerede bir eleman sadece bir defa geçer  
 kume2={"a","b","d","e"} #bu da ikinci kümemiz olsun  
@@ -11,20 +12,20 @@ numbers=[1,2,3,4,5,6] #liste oluşturduk
 print(sum(numbers)) #listedeki elemanları topladık, diğer işlemlerde yapılabilir  
 print(min(numbers)) #listedeki en küçük elemanı aldık, maksimumda alabiliriz  
 kullanici = {"ad": "Vefa", "yas": 19 } #burada sözlük oluşturduk ilk kısımlar anahtarlar yanındakiler ise değerler  
-for  
+#for  
 numbers=[1,2,3,4,5,6] #listemiz var  
 for x in numbers:  
-&nbsp&nbsp&nbspprint(isim) #sırayla listedeki elemanları yazar  
+    print(isim) #sırayla listedeki elemanları yazar  
 for x in range(1, 10):  
     print(x) #burada da x sırasıyla aralıktaki rakamların yerine geçer yazdır dediğimiz için sırasıyla yazar ama 1 dahil 10 dahil değil  
-if-elif else  
+#if-elif else  
 liste=[1,2,3,4,5]  
 for i in liste:  
     if  i == 3:  #eğer i 3 ise   
         continue #atla ve devam et  
     elif i==4: #ya da eğer 4 ise  
       break #for döngüsünden çık  
-while  
+#while  
 x=2  
 while x<10: #x küçüktür 10 iken  
    x += 3 #3 ekle  
@@ -32,12 +33,12 @@ while x<10: #x küçüktür 10 iken
       print(x) #ve son değeri yaz, burada 11 olur  
    else:  
     print("islemdeki deger:",x) #10 değilse de o işlemdeki değeri yaz, sırasıyla 5,8 yazar  
-function  
+#function  
 def topla(a,b): #bir fonksiyon ve değişkenlerini tanımladık  
     return a + b #fonksiyonun yapacağı işlemi tanımladık ve return ile dışarıya yolladık bu bilgiyi  
 sonuc=topla(3,5) veya sonuc=topla(a=3,b=3) #değişkenlere değer atadık  
 print(sonuc) #ve işlemin sonucunu yazdırdık  
-class  
+#class  
 class kullanici: #kullanıcı sınıfı oluşturduk  
     def __init__(self, ad, soyad): #self kullanıcıların yerine geçecek diğerleri de kullanıcıların özellikleri olacak  
         self.ad = ad  
